# moviemate

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh  utils.py
app/: app_config.toml  context_manager.py  main.py
app/controllers/: chat_controller.py  code_controller.py  embedding_controller.py
chat_history/: chat_1.json  chat_2.json  index.json
data/: clean_data.csv  data_engine.py  fetch_movies.py  raw_movies.csv
data/shards/: shard_0.csv  shard_1.csv  shard_2.csv  shard_3.csv  shard_4.csv  shard_5.csv  shard_6.csv  shard_7.csv  shard_8.csv  shard_9.csv
models/: README.md  embedding_model.py  main_model.py
notebooks/: eda.ipynb
notebooks/.ipynb_checkpoints/: eda-checkpoint.ipynb
