[project]
name = "project-1"
version = "0.1.0"
description = "Movies RAG"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "bs4>=0.0.2",
    "chroma>=0.2.0",
    "chromadb>=1.5.5",
    "jupyter>=1.1.1",
    "mamba-ssm>=2.3.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.4.3",
    "psycopg>=3.3.3",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "torchinfo>=1.8.0",
    "transformers>=5.3.0",
]
